TASpring change log

0.next

* [feature] Custom unit icons are supported. See http://taspring.clan-sy.com/wiki/CustomUnitIcons for more info.
* [bugfix] 'Quit and Resign' dialog now also appears when you're hosting, and stays hidden when the game is over.
* [bugfix] Commands on enemy units (attack, reclaim) get canceled automatically when the unit leaves LOS / radar.
* [change] 'Quit and Resign' dialog now only gives everything to allies (and not enemies) if they are still alive.
* [change] The LOS drawing mode is remembered when you switch back and forth to others (e.g. metalmap, heightmap).
* [change] Radar and jammer range is shown by default if you press 'L'.
* [change] Radar and jammer toggle ';' happens instantly.
* New weapon tdf tag rgbcolor2, used to make laser weapon have diferent color at the center, defaults to white.
* New weapon tdf tag corethickness, how thick the inner color of a laser is, this is a percentage value, default is 0.25
* New weapon tdf tag laserflaresize, size of the flare for laser weapons, multiplier for thickness, default 15.
* tdf tag duration is used for laser weapons.
* edgeEffectivness added for weapons
- Added limited fuel settings for units (only work for aircrafts so far, need a good mechanism for refueling other stuff)
-  New fbi tag MaxFuel, max fuel in seconds that the unit can carry, default 0 = unlimited
-  New fbi tag RefuelTime, how long time it takes to fully refuel the unit, default 5
-  New fbi tag MinAirBasePower, minimum build power an airbase unit must have for the aircraft to land on it, default 0
-  New fbi tag WeaponFuelUsage<1-16>, how much fuel in seconds that firing the weapon takes from the owning unit, default 0
- New COB "get"/"set" constant: 75 MAX_SPEED get/sets the max speed of the unit (multiplied with 64k)

0.72b1
